# widgetastic_kakusu

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  setup.cfg  setup.py
