[metadata]

name = widgetastic_kakusu
description = structured widget libraries
long_description = file: README.rst

license = Apache 2 license
license_file = LICENSE
keywords = test, unittest, widget
[options]
zip_safe = no
packages = find:

python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*

[options.packages.find]
where = src

[bdist_wheel]
universal = 1
